@@ -29,22 +29,26 @@ import org.treetank.api.IAxis;
  */
 public class NestedAxis extends AbstractAxis implements IAxis {
 
-  /** Axis to test. */
-  private final IAxis mInnerAxis;
+  /** Parent axis. */
+  private final IAxis mParentAxis;
 
-  /** Test to apply to axis. */
-  private final IAxis mOuterAxis;
+  /** Child axis to apply to each node found with parent axis. */
+  private final IAxis mChildAxis;
+
+  /** Is it the first run of parent axis? */
+  private boolean mIsFirst;
 
   /**
    * Constructor initializing internal state.
    * 
-   * @param innerAxis Inner nested axis.
-   * @param outerAxis Outer nested axis.
+   * @param parentAxis Inner nested axis.
+   * @param childAxis Outer nested axis.
    */
-  public NestedAxis(final IAxis innerAxis, final IAxis outerAxis) {
-    super(innerAxis.getTransaction());
-    mInnerAxis = innerAxis;
-    mOuterAxis = outerAxis;
+  public NestedAxis(final IAxis parentAxis, final IAxis childAxis) {
+    super(parentAxis.getTransaction());
+    mParentAxis = parentAxis;
+    mChildAxis = childAxis;
+    mIsFirst = true;
   }
 
   /**
@@ -53,11 +57,11 @@ public class NestedAxis extends AbstractAxis implements IAxis {
   @Override
   public final void reset(final long nodeKey) {
     super.reset(nodeKey);
-    if (mInnerAxis != null) {
-      mInnerAxis.reset(nodeKey);
+    if (mParentAxis != null) {
+      mParentAxis.reset(nodeKey);
     }
-    if (mOuterAxis != null) {
-      mOuterAxis.reset(nodeKey);
+    if (mChildAxis != null) {
+      mChildAxis.reset(nodeKey);
     }
   }
 
@@ -67,16 +71,28 @@ public class NestedAxis extends AbstractAxis implements IAxis {
   public final boolean hasNext() {
     resetToLastKey();
 
+    // Make sure that parent axis is moved for the first time.
+    if (mIsFirst) {
+      mIsFirst = false;
+      if (mParentAxis.hasNext()) {
+        mChildAxis.reset(mParentAxis.next());
+      } else {
+        resetToStartKey();
+        return false;
+      }
+    }
+
+    // Execute child axis for each node found with parent axis.
     boolean hasNext = false;
-    while (!(hasNext = mOuterAxis.hasNext())) {
-      if (mInnerAxis.hasNext()) {
-        mOuterAxis.reset(mInnerAxis.next());
+    while (!(hasNext = mChildAxis.hasNext())) {
+      if (mParentAxis.hasNext()) {
+        mChildAxis.reset(mParentAxis.next());
       } else {
         break;
       }
     }
     if (hasNext) {
-      mOuterAxis.next();
+      mChildAxis.next();
       return true;
     }
 
